ENH: Add webhooks (#2)
* ENH: Get k8s deployment working, add YTT manifests

* CONT: More of the last commit that I forgot to add

* ENH: Fix default config

* ENH: Fix node management

* FIX: Resolve https connection and kapp ordering issues

* MAINT: Update gitignore

* ENH: Fix various bugs, resolve UI display issue

* DOC: Update README

* MAINT: Update copyright on docs

* ENH: CLI updates

* ENH: Server updates

* MAINT: Misc updates

* MAINT: Rename ui dir

* FIX: Resolve auto-execute issue

* ENH: Add ability to change auto-execute from UI

* ENH: Allow cascade delete from UI

* ENH: Add local run support

* ENH: Fix Bulwark connection issues, update packages

* ENH: Add webhook functionality

* DOC: Update Swagger docs

* ENH: Split out 403 page from 401

* FIX: Resolve UI bugs

* ENH: Format swagger on docs stud command
